fix: support with jdk8 (#496)